--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: music_playce_sdk
 description: A new Flutter project.
+homepage: https://github.com/musicplayce/flutter-sdk
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -15,7 +16,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.1.0+1
+version: 0.2.0
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -28,6 +29,7 @@ dependencies:
   crypto: ^2.0.6
   rxdart: ^0.24.0
   http: ^0.12.1
+  http_parser: ^3.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
