--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ homepage: https://github.com/musicplayce/flutter-sdk
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.3.0+1
+version: 0.4.0+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -25,7 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_secure_storage: ^3.3.3
-  get_it: ^3.0.0+1
+  get_it: ^4.0.4
   crypto: ^2.0.6
   rxdart: ^0.24.0
   http: ^0.12.1
