--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_secure_storage: ^3.3.3
-  get_it: ^3.0.0+1
+  get_it: ^4.0.4
   crypto: ^2.0.6
   rxdart: ^0.24.0
   http: ^0.12.1
   http_parser: ^3.1.4
+  dartz: ^0.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +39,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^4.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
