--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   http: ^0.12.1
   http_parser: ^3.1.4
   dartz: ^0.9.1
+  share_api:
+    path: ../../dev/flutter-share-api
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
