--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ homepage: https://github.com/musicplayce/flutter-sdk
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.8.0+1
+version: 0.8.2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -31,8 +31,6 @@ dependencies:
   http: ^0.12.1
   http_parser: ^3.1.4
   dartz: ^0.9.1
-  share_api:
-    path: ../../dev/flutter-share-api
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
